--- a/H5T01-5f8312b24d4349aece55618999b4b1c1297c5996/00template/css/main.css
+++ b/H5T01-5f8312b24d4349aece55618999b4b1c1297c5996/00template/css/main.css
@@ -23,8 +23,13 @@ img {
 #header {
     text-align: center;
     font-size: 2rem;
+    margin: 50px 0;
 }
 
+#nav {
+    height: 36px;
+    background-color: #eef771;
+}
 
 #nav ul {
     list-style: none;
@@ -32,9 +37,9 @@ img {
 
 #nav ul li {
     display: inline-block;
+    float: left;
     width: 100px;
     text-align: center;
-    background-color: #eef771;
     padding: 10px;
 }
 #nav ul li a {
@@ -91,6 +96,13 @@ img {
     margin-bottom: 10px;
     width: 100%;
     height: 20px;
+}
+
+#footer .contact input[type=submit] {
+    background-color: #e3e06f;
+    height: 50px;
+    color: #f42d3c;
+    border: 0;
 }
 
 #footer .contact textarea {
